--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/desertpython/jest-another-RPG/issues"
   },
-  "homepage": "https://github.com/desertpython/jest-another-RPG#readme"
+  "homepage": "https://github.com/desertpython/jest-another-RPG#readme",
+  "devDependencies": {
+    "jest": "^26.1.0"
+  }
 }
